# TAGAnalysis

./: .gitignore  CMakeLists.txt
lib/tag_parser/: CMakeLists.txt
lib/tag_parser/include/tag_parser/: csv_reader.hpp  tag_parser.hpp  utils.hpp
lib/tag_parser/src/: csv_reader.cpp  tag_parser.cpp  utils.cpp
src/: main.cpp
